--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,8 @@
 @import "components/header";
 @import "components/hero";
 @import "components/catalog";
+@import "components/cards";
+@import "components/blog";
 @import "components/footer";
 @import "components/login";
 @import "components/mediaqueries";
