--- a/src/css/style.css
+++ b/src/css/style.css
@@ -49,6 +49,20 @@
   padding: 0;
 }
 
+html::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #F5F5F5;
+  border-radius: 10px;
+}
+html::-webkit-scrollbar {
+  width: 10px;
+  background-color: #F5F5F5;
+}
+html::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: var(--text-color);
+}
+
 body {
   font-family: var(--body-font);
   color: var(--title-color);
@@ -95,7 +109,7 @@ button {
   transition: all 0.3s ease;
 }
 .btn:hover {
-  background: var(--first-color-light);
+  opacity: 0.8;
 }
 
 .container {
@@ -106,7 +120,7 @@ button {
 
 .main {
   padding-top: 75px;
-  padding-bottom: 120px;
+  padding-bottom: 100px;
 }
 
 .header {
@@ -185,6 +199,7 @@ button {
   padding: 26px;
   text-align: center;
   background: #fff;
+  margin-left: -1px;
   transition: all 0.3s ease;
 }
 .header__item:first-child, .header__item:nth-child(4) {
@@ -424,6 +439,9 @@ button {
           user-select: none;
 }
 
+.catalog {
+  margin-bottom: 100px;
+}
 .catalog__container {
   display: flex;
 }
@@ -730,7 +748,7 @@ button {
 }
 
 .cards {
-  margin-top: 100px;
+  margin-bottom: 100px;
 }
 .cards__list {
   display: grid;
@@ -780,9 +798,6 @@ button {
   transform: translateX(4px);
 }
 
-.blog {
-  margin-top: 130px;
-}
 .blog__title {
   font-weight: 700;
   font-size: var(--h2-font-size);
@@ -850,11 +865,15 @@ button {
   width: 15px;
 }
 
-.footer {
-  padding-bottom: 150px;
-}
 .footer__container {
   background: var(--border-color);
+  border-bottom: 2px solid var(--first-color-light);
+}
+.footer__text {
+  text-align: center;
+  padding: 15px 0;
+  font-weight: 400;
+  font-size: var(--description-text);
 }
 .footer__information {
   display: flex;
@@ -1284,7 +1303,8 @@ button {
     display: none;
   }
   .catalog__cards {
-    row-gap: 50px;
+    row-gap: 30px;
+    margin-bottom: 30px;
   }
   .catalog__card {
     border-radius: 20px;
@@ -1303,6 +1323,9 @@ button {
   .catalog__btn {
     background: #fff;
   }
+  .cards {
+    margin-bottom: 60px;
+  }
   .cards__item {
     padding-left: 30px;
     background: #fff;
@@ -1319,6 +1342,9 @@ button {
   .blog__item {
     background: #fff;
   }
+  .footer {
+    padding-bottom: 110px;
+  }
   .footer__container {
     background: #fff;
   }
@@ -1334,8 +1360,7 @@ button {
   .footer__card {
     text-align: center;
     max-width: 100%;
-    padding-left: 27px;
-    padding-right: 0;
+    padding: 0;
     border: none;
     margin-bottom: 20px;
   }
@@ -1370,6 +1395,9 @@ button {
   }
 }
 @media screen and (max-width: 576px) {
+  .main {
+    padding-bottom: 60px;
+  }
   .header__item {
     padding: 26px 10px;
   }
