--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -78,6 +78,7 @@
     padding: 26px;
     text-align: center;
     background: #fff;
+    margin-left: -1px;
     transition: all 0.3s ease;
 
     &:first-child,
