--- a/src/scss/components/_mediaqueries.scss
+++ b/src/scss/components/_mediaqueries.scss
@@ -149,7 +149,8 @@
     }
 
     &__cards {
-      row-gap: 50px;
+      row-gap: 30px;
+      margin-bottom: 30px;
     }
 
     &__card {
@@ -177,6 +178,8 @@
 
   // CARDS
   .cards {
+    margin-bottom: 60px;
+
     &__item {
       padding-left: 30px;
       background: #fff;
@@ -199,6 +202,8 @@
 
   // FOOTER 
   .footer {
+    padding-bottom: 110px;
+
     &__container {
       background: #fff;
     }
@@ -217,8 +222,7 @@
     &__card {
       text-align: center;
       max-width: 100%;
-      padding-left: 27px;
-      padding-right: 0;
+      padding: 0;
       border: none;
       margin-bottom: 20px;
     }
@@ -265,6 +269,9 @@
 
 // MEDIA 576px
 @media screen and (max-width: 576px) {
+  .main {
+    padding-bottom: 60px;
+  }
 
   // HEADER
   .header {
