--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -27,7 +27,7 @@
   transition: all 0.3s ease;
 
   &:hover {
-    background: var(--first-color-light);
+    opacity: 0.8;
   }
 }
 
@@ -39,5 +39,5 @@
 
 .main {
   padding-top: 75px;
-  padding-bottom: 120px;
+  padding-bottom: 100px;
 }
